# contacts-catch-up-voice-assistant

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  contact_catch_up_voice_assistant_plan.md  pyproject.toml
.hypothesis/constants/: 058a0c9f4620c2f2  0ac30385b3b4ad86  2391dad5324e4883  36576c97da8c9960  38f403d300ad2ade  3a50a5ed83eb0f70  5e4ec6380b98230f  7aa7711cc97b944e  8ea5bf74b5925a02  8fc983fd82a86799  ada65fe5eaacad31  b6927cb350d055ea  bb5d8f9b97e35cfc  d76555f6e8868821  da39a3ee5e6b4b0d  e3afb3fb03b27b0b
.hypothesis/examples/8060c75c4961c4f7/: 941446fd99c6fa97
.kiro/specs/contacts-catch-up-voice-assistant/: tasks.md
app/: config.py  db.py  main.py  sse_bus.py
app/models/: contact.py  memory.py
app/routes/: calls.py  contacts.py  dashboard.py  webhook.py
app/services/: calendar.py  embedding.py  llm.py  qdrant.py  scoring.py  vapi.py
app/services/social/: base.py  fixtures.py  ingest.py  instagram.py  linkedin.py  twitter.py
app/static/: index.html
app/templates/: base.html
app/templates/contacts/: detail.html  form.html  list.html
app/workers/: scheduler.py
scripts/: benchmark_embeddings.py  migrate_embeddings.py  seed_contacts.py  setup_vapi.py
tests/unit/: test_calendar.py  test_config.py  test_contacts_properties.py  test_dashboard.py  test_embedding.py  test_llm.py  test_memory.py  test_scheduler.py  test_scoring.py  test_social.py  test_tool_endpoints.py  test_vapi_service.py  test_webhook.py
