[project]
name = "contacts-catch-up-voice-assistant"
version = "0.1.0"
description = "Proactive outbound voice calls to keep relationships warm."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "aiosqlite",
    "qdrant-client",
    "openai",
    "apscheduler",
    "jinja2",
    "python-multipart",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-asyncio",
    "respx",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
